Add documentation and types for painter api and begin documentation for super canvas api

--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -3,7 +3,7 @@ name: The Super Canvas
 menu: 2. Components
 ---
 
-import SuperCanvas from '../src/components/SuperCanvas';
+import SuperCanvas from '../../src/components/SuperCanvas';
 import { Playground, Props } from 'docz';
 
 # The Super Canvas
