Use name super canvas manager instead of super canvas API

--- a/docs/the-api/super-canvas-api.mdx
+++ b/docs/the-api/super-canvas-api.mdx
@@ -1,10 +1,10 @@
 ---
-name: SuperCanvasApi
+name: SuperCanvasManager
 menu: 3. The API
 route: /supercanvasapi
 ---
 
-# Super Canvas API
+# Super Canvas Manager
 
 This document lays out the API that manages the virtual canvas space, mediates user interactions, and renders canvas items. It is not meant to be extended directly so it might not make it in the final version of documentation. Right now these are just development notes
 
