--- a/docs/the-api/super-canvas-api.mdx
+++ b/docs/the-api/super-canvas-api.mdx
@@ -6,7 +6,7 @@ route: /supercanvasapi
 
 # Super Canvas Manager
 
-This document lays out the API that manages the virtual canvas space, mediates user interactions, and renders canvas items. It is not meant to be extended directly so it might not make it in the final version of documentation. Right now these are just development notes
+This document lays out the API that manages the virtual canvas space, mediates user interactions, and renders canvas items. It is not meant to be extended directly so it might not make it in the final version of documentation. Right now these are just development notes. This should api should really only be used by the canvas component itself.
 
 ## Requirements
 
