--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -46,7 +46,7 @@ The canvas background element enforces snap rules and renders background content
 ## Todo
 
 1. [X] Render background element
-2. [ ] Add grid background element
+2. [X] Add grid background element
 3. [ ] Flesh out canvas item API
 	1. [ ] Click detection
 	2. [ ] Canvas item selection
