update component docs

--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -11,7 +11,7 @@ import { Playground, Props } from 'docz';
 # The Super Canvas
 
 ```js
-import { SuperCanvas } from 'react-super-canvas';
+import { SuperCanvas, GridBackground, CircleBrush } from 'react-super-canvas';
 ```
 
 The super canvas is super easy to use! Use it just like this:
