Add rough framework for toolbar

--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -23,6 +23,7 @@ The super canvas is super easy to use! Use it just like this:
 		width={600}
 		activeBackgroundElement={new GridBackground(20)}
 		availableBrushes={[
+			new CircleBrush(),
 			new PolygonBrush(),
 		]}
 	/>
