--- a/docs/the-api/the-painter-api.mdx
+++ b/docs/the-api/the-painter-api.mdx
@@ -6,15 +6,11 @@ route: /painterapi
 
 # The Painter API
 
-The painter api is an API for virtually rendering things absolutely to the HTML5 canvas element
+The painter api is an API for virtually rendering things absolutely to the HTML5 canvas element. This should always be used instead of the canvas rendering context.
 
 ## Methods
 
-1. `setPan(pan: Vector2D) => void` - Sets the pan (used by [SuperCanvasApi](/supercanvasapi))
-2. `setScale(scale: number) => void` - Sets the scale (used by [SuperCanvasApi](/supercanvasapi))
-3. `setContext2D(context: CanvasRenderingContext2D) => void` - Sets the canvas render (used by [SuperCanvasApi](/supercanvasapi))
-4. `clearCanvas(canvasSize: Vector2D) => void` - Clears all drawn elements on the canvas (used by [SuperCanvasApi](/supercanvasapi))
-5. `drawLine(line: Line) => void` - Draws a line in the virtual canvas space
-6. `drawImage(topLeftCorner: Vector2D, imageUrl: string) => void` - Draws an image in the virtual canvas space
-7. `drawRect(rect: Rectangle) => void` - Draws a rectangle in the virtual canvas space
-8. `drawCircle(circle: Circle) => void` - Draws a circle in the virtual space
+1. `drawLine(line: Line) => void` - Draws a line in the virtual canvas space
+2. `drawImage(topLeftCorner: Vector2D, imageUrl: string) => void` - Draws an image in the virtual canvas space
+3. `drawRect(rect: Rectangle) => void` - Draws a rectangle in the virtual canvas space
+4. `drawCircle(circle: Circle) => void` - Draws a circle in the virtual space
