--- a/docs/the-api/shapes.mdx
+++ b/docs/the-api/shapes.mdx
@@ -7,6 +7,9 @@ route: /shapes
 import { InterfaceDocumentation } from '../InterfaceDocumentation';
 import StyledShape from '../../meta/interfaces/StyledShape';
 import Circle from '../../meta/interfaces/Circle';
+import Polygon from '../../meta/interfaces/Polygon';
+import Rectangle from '../../meta/interfaces/Rectangle';
+import Line from '../../meta/interfaces/Line';
 
 # Shape Interfaces
 
@@ -14,12 +17,26 @@ These interfaces are used for performing calculations on and rendering geometric
 
 ## `interface StyledShape`
 
-All shapes extend this interface which provides optional styling information to a shape. When rendering, the [painter api](/painterapi) uses these attributes to determine styling information. All attributes are optional and will be filled with default values if null.
+All shapes (except Line) extend this interface which provides optional styling information to a shape. When rendering, the [painter api](/painterapi) uses these attributes to determine styling information. All attributes are optional and will be filled with default values if null.
 
 <InterfaceDocumentation interfaceMetadata={StyledShape} />
 
+*All of the following except Line extend StyledShape*
+
+## `interface Line`
+
+*Line not extend StyledShape*
+
+<InterfaceDocumentation interfaceMetadata={Line} hideInheritedMembers />
+
 ## `interface Circle`
 
-*Extends StyledShape*
-
 <InterfaceDocumentation interfaceMetadata={Circle} hideInheritedMembers />
+
+## `interface Rectangle`
+
+<InterfaceDocumentation interfaceMetadata={Rectangle} hideInheritedMembers />
+
+## `interface Polygon`
+
+<InterfaceDocumentation interfaceMetadata={Polygon} hideInheritedMembers />
