Add short description of shapes utility

--- a/docs/utility/shapes-util.mdx
+++ b/docs/utility/shapes-util.mdx
@@ -1,10 +1,14 @@
 ---
-name: Shapes Utility
+name: Shape Utility
 menu: 4. Utility Library
 route: /shapes-util
 ---
 
 import { UtilityMethodDocumentation } from '../UtilityMethodDocumentation';
 import ShapesUtilMeta from '../../meta/utility/shapes-util.json';
+
+# Shape Utility Methods
+
+This collection of methods adds easy operations for working with shapes and geometry, making it easier to construct canvas items. Imports from `react-super-canvas/shapes-util`.
 
 <UtilityMethodDocumentation meta={ShapesUtilMeta} />
