Display union types and generics in interface documentation

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,12 +7,12 @@ route: /
 
 Welcome!
 
-React super canvas is an API for creating power, declarative, canvas based visual graphics editors. This is useful for creating diagrams editors, map makers, graph editors and so forth. This project was originally made to power the map making tool in my other project [Campaign Buddy](http://app.dndcampaignbuddy.com). I decided to open source this as I saw more potential than just creating dungeon maps. This project uses [semantic versioning](https://semver.org/) to track versions.
+React super canvas is an API for creating powerful, declarative, canvas based visual graphical editors. This is useful for creating diagram editors, map makers, graph editors and so forth. Imagine it as [QuillJS](https://quilljs.com/) but for visual/graphical input. This project was originally made to power the map making tool in my other project [Campaign Buddy](http://app.dndcampaignbuddy.com). I decided to open source this as I saw more potential than just creating dungeon maps. This project uses [semantic versioning](https://semver.org/) to track versions.
 
 ## Project goals
 
 1. **Simplicity of implementation** - It should be easy to use right out of the box with little configuration. It should not be much more complicated than using a text input component.
-2. **Simplicity of use** - End users should be able to use the SuperCanvas to create graphical canvas based creations (maps, graphs, diagrams, etc) without needing to read any documentation. It *feel natural* to use.
+2. **Simplicity of use** - End users should be able to use the SuperCanvas to create graphical canvas based creations (maps, graphs, diagrams, etc) without needing to read any documentation. It *feels natural* to use.
 3. **Customizability** - Developers should be able to extend the editor to create a graphical canvas based editor that suits any need (map creation, photo editing, diagraming, etc).
 
 ## Concepts
