Manually organize the sidebar menus

--- a/docs/components/extending-the-toolbar.mdx
+++ b/docs/components/extending-the-toolbar.mdx
@@ -1,6 +1,6 @@
 ---
-name: 2. Extending the Toolbar
-menu: 2. Components
+name: Extending the Toolbar
+menu: Components
 ---
 
 import ToolbarProps from '../../meta/interfaces/ToolbarProps.json';
