--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -1,6 +1,6 @@
 ---
-name: 1. The Super Canvas
-menu: 2. Components
+name: The Super Canvas
+menu: Components
 ---
 
 import SuperCanvas from '../../src/components/SuperCanvas';
