Add better urls

--- a/docs/components/extending-the-toolbar.mdx
+++ b/docs/components/extending-the-toolbar.mdx
@@ -1,6 +1,7 @@
 ---
 name: Extending the Toolbar
 menu: Components
+route: extendingtoolbar
 ---
 
 import ToolbarProps from '../../meta/interfaces/ToolbarProps.json';
