--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -1,6 +1,7 @@
 ---
 name: The Super Canvas
 menu: Components
+route: supercanvas
 ---
 
 import SuperCanvas from '../../src/components/SuperCanvas';
