--- a/docs/the-api/background-element.mdx
+++ b/docs/the-api/background-element.mdx
@@ -1,7 +1,7 @@
 ---
 name: IBackgroundElement
 menu: API Reference
-route: ibackgroundelement
+route: /ibackgroundelement
 ---
 
 import { InterfaceDocumentation } from '../InterfaceDocumentation';
