--- a/docs/the-api/canvas-item-interface.mdx
+++ b/docs/the-api/canvas-item-interface.mdx
@@ -1,6 +1,7 @@
 ---
 name: ICanvasItem
 menu: API Reference
+route: /icanvasitem
 ---
 
 import { InterfaceDocumentation } from '../InterfaceDocumentation';
