--- a/docs/the-api/utility.mdx
+++ b/docs/the-api/utility.mdx
@@ -6,6 +6,7 @@ route: /utility
 
 import { InterfaceDocumentation } from '../InterfaceDocumentation';
 import Vector2D from '../../meta/interfaces/Vector2D.json';
+import Type from '../../meta/interfaces/Type.json';
 
 # Utility Interfaces
 
@@ -16,3 +17,9 @@ These interfaces are used as a convinience for various operations.
 Represents a cartesian (x, y) point on a plane.
 
 <InterfaceDocumentation interfaceMetadata={Vector2D} />
+
+## `interface Type<T>`
+
+Represents a class (similar to the [Type](https://docs.microsoft.com/en-us/dotnet/api/system.type?view=netframework-4.8) class in C#). `CircleBrush` would be `Type<IBrush>`. Essentially [copied from angular](https://github.com/angular/angular/blob/6.1.6/packages/core/src/type.ts#L25).
+
+<InterfaceDocumentation interfaceMetadata={Type} />
