--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -25,8 +25,8 @@ The SuperCanvas is the editing environment built on top of the HTML5 canvas. Ess
 
 1. Panning
 2. Zooming
-5. Hotkeys
-6. Selecting canvas items
+3. Selecting canvas items
+4. Transforming canvas items
 
 ### Canvas Items
 
