Correct import statment in example in docs

--- a/docs/components/the-canvas.mdx
+++ b/docs/components/the-canvas.mdx
@@ -18,7 +18,8 @@ import { Playground } from 'docz';
 # The Super Canvas
 
 ```js
-import { SuperCanvas, GridBackground, CircleBrush } from 'react-super-canvas';
+import { SuperCanvas } from 'react-super-canvas';
+import { CircleBrush, PolygonBrush, ImageBrush } from 'react-super-canvas/defaults';
 ```
 
 The super canvas is super easy to use! Use it just like this:
