Add link to code for example custom components

--- a/docs/components/extending-the-toolbar.mdx
+++ b/docs/components/extending-the-toolbar.mdx
@@ -25,6 +25,8 @@ import CircleBrush from '../../src/api/brushes/CircleBrush';
 
 The toolbar in the component was designed using a replaceable component pattern, similarly to how [react-select](https://react-select.com/home) works. It is made up atomic components that can be individually replaced to your use case. This allows you to add custom functionality to the toolbar without having to completely re-implement it.
 
+See [here](https://github.com/josephdangerstewart/react-super-canvas/blob/netlify/docs/CustomToolbarComponents.tsx) if you want to see the code for the custom components used in these examples.
+
 ## Toolbar
 
 ### `interface ToolbarProps`
