Add link to source code

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,6 +7,8 @@ route: /
 
 Welcome!
 
+The source code for this project can be found [here](https://github.com/josephdangerstewart/react-super-canvas/tree/master).
+
 React super canvas is an API for creating powerful, declarative, canvas based visual graphical editors. This is useful for creating diagram editors, map makers, graph editors and so forth. Imagine it as [QuillJS](https://quilljs.com/) but for visual/graphical input. This project was originally made to power the map making tool in my other project [Campaign Buddy](http://app.dndcampaignbuddy.com). I decided to open source this as I saw more potential than just creating dungeon maps. This project uses [semantic versioning](https://semver.org/) to track versions.
 
 ## Project goals
