--- a/docs/the-api/brush-interface.mdx
+++ b/docs/the-api/brush-interface.mdx
@@ -52,7 +52,7 @@ import { SuperCanvas } from 'react-super-canvas';
 />
 ```
 
-## Remarks on `supportedCanvasItem`
+## Remarks on `supportedCanvasItems`
 
 The usage of `supportedCanvasItems` might be a little bit confusing. Say you have a brush called `CharacterBrush` that can paint NPCs and PCs on a map. Say that NPCs and PCs are both rendered by the `NPCCanvasItem` class and `PCCanvasItem` class respectively. Your declaration for `CharacterBrush` might look a little bit like the following.
 
