Add documentation for IImageCache

--- a/docs/the-api/utility.mdx
+++ b/docs/the-api/utility.mdx
@@ -8,10 +8,17 @@ import { InterfaceDocumentation } from '../InterfaceDocumentation';
 import Vector2D from '../../meta/interfaces/Vector2D.json';
 import Type from '../../meta/interfaces/Type.json';
 import JsonData from '../../meta/interfaces/JsonData.json';
+import IImageCache from '../../meta/interfaces/IImageCache.json';
 
 # Utility Interfaces
 
 These interfaces are used as a convinience for various operations.
+
+## `interface IImageCache`
+
+A simple api for accessing images quickly using a cache.
+
+<InterfaceDocumentation interfaceMetadata={IImageCache} />
 
 ## `interface Vector2D`
 
