Add documentation for ISelection

--- a/docs/the-api/utility.mdx
+++ b/docs/the-api/utility.mdx
@@ -9,6 +9,7 @@ import Vector2D from '../../meta/interfaces/Vector2D.json';
 import Type from '../../meta/interfaces/Type.json';
 import JsonData from '../../meta/interfaces/JsonData.json';
 import IImageCache from '../../meta/interfaces/IImageCache.json';
+import ISelection from '../../meta/interfaces/ISelection.json';
 
 # Utility Interfaces
 
@@ -19,6 +20,12 @@ These interfaces are used as a convinience for various operations.
 A simple api for accessing images quickly using a cache.
 
 <InterfaceDocumentation interfaceMetadata={IImageCache} />
+
+## `interface ISelection`
+
+Represents the current selection of canvas items.
+
+<InterfaceDocumentation interfaceMetadata={ISelection} />
 
 ## `interface Vector2D`
 
