--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -11,6 +11,12 @@ The source code for this project can be found [here](https://github.com/josephda
 
 React super canvas is an API for creating powerful, declarative, canvas based visual graphical editors. This is useful for creating diagram editors, map makers, graph editors and so forth. Imagine it as [QuillJS](https://quilljs.com/) but for visual/graphical input. This project was originally made to power the map making tool in my other project [Campaign Buddy](http://app.dndcampaignbuddy.com). I decided to open source this as I saw more potential than just creating dungeon maps. This project uses [semantic versioning](https://semver.org/) to track versions.
 
+## Installation
+
+```
+yarn add react-super-canvas
+```
+
 ## Project goals
 
 1. **Simplicity of implementation** - It should be easy to use right out of the box with little configuration. It should not be much more complicated than using a text input component.
